install font Tajawal  and make page rtl direction

--- a/src/blog/static/blog/css/main.css
+++ b/src/blog/static/blog/css/main.css
@@ -1,3 +1,12 @@
-div{
-    color: red;
+@font-face{
+    font-family: 'Tajawal';
+    src: url('../fonts/Tajawal-Regular.ttf') format("truetype") 
+    local('Tajawal');
+}
+html, body{
+    direction: rtl;
+    text-align: right;
+}
+body{
+    font-family: 'Tajawal' ,sans-serif;
 }
