--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -6,12 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css'%}">
-        <link rel="stylesheet" href="{% static 'blog/css/main.css'  %}" >
+        <link rel="stylesheet" href="{% static 'blog/css/main.css'%}">
     </head>
+    <h1>
     <body>
         <div>
-            <i class="fab fa-hubspot"></i> Hello <i class="fas fa-fighter-jet"></i>!!!
-        </div>
+        <i class="fab fa-hubspot"></i> Hello السلام عليكم ورحمة الله و بركاته <i class="fas fa-fighter-jet"></i>!!!
+    </div>
+</h1>
+<h1>
+    السلام عليكم ورحمة الله و بركاته
+    </h1>
+        lglglgl
         <script src="{% static 'blog/js/jquery-3.3.1.slim.min.js'%}"></script>
         <script src="{% static 'blog/js/popper.min.js'%}"></script>
         <script src="{% static 'blog/js/bootstrap.min.js'%}"></script>
