--- a/src/blog/static/blog/css/main.css
+++ b/src/blog/static/blog/css/main.css
@@ -1,12 +1,18 @@
-@font-face{
+@font-face {
     font-family: 'Tajawal';
-    src: url('../fonts/Tajawal-Regular.ttf') format("truetype") 
-    local('Tajawal');
-}
+    src: url('../fonts/Tajawal-Regular.ttf')  format("truetype"),
+         local('Tajawal');
+  }
+
 html, body{
     direction: rtl;
     text-align: right;
 }
+
 body{
-    font-family: 'Tajawal' ,sans-serif;
+    font-family: 'Tajawal', sans-serif;
+}
+.dropdown-menu .dropdown-item{
+    text-align: right;
+}
 }
