--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -7,17 +7,63 @@
 
         <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css'%}">
         <link rel="stylesheet" href="{% static 'blog/css/main.css'%}">
+        <link rel="shortcut icon " href="{% static 'blog/images/logo3.png'%}">
     </head>
-    <h1>
+    
     <body>
-        <div>
-        <i class="fab fa-hubspot"></i> Hello السلام عليكم ورحمة الله و بركاته <i class="fas fa-fighter-jet"></i>!!!
-    </div>
-</h1>
+      <header>
+          <!-- start navar -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+            <a class="navbar-brand" href="#">
+                <img src="{% static 'blog/images/logo3.png'%}"  alt="شعار المؤسسة"  width="35px">
+                
+                ثانوية ضو مسعود</a>
+             
+            <button class=" navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                قائمة <span class="navbar-toggler-icon"></span> 
+            </button>
+         
+            <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+              <ul class="navbar-nav " >
+                    <li class="nav-item active">
+                             <a class="nav-link" href="#">الرئيسية <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="#">المدونة</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        محتوىات</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">المحتوى الأول </a>
+                            <a class="dropdown-item" href="#">المحتوى الثاني</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">المحتوى الثالث</a>
+                    </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">من أنا</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">إتصل بنا </a>
+                    </li>
+                     
+              </ul>
+              <ul  class="navbar-nav mr-auto">
+                  <li class="nav-item"> <a class="nav-link" href="#"> تسجيل الدخول </a></li>
+                  <li class="nav-item"><a class="nav-link" href="#">   تسجيل  </a></li>
+              </ul>
+              
+            </div>
+          </nav>
+          <!-- End Navbar -->
+      </header>
+
 <h1>
     السلام عليكم ورحمة الله و بركاته
     </h1>
-        lglglgl
+       
         <script src="{% static 'blog/js/jquery-3.3.1.slim.min.js'%}"></script>
         <script src="{% static 'blog/js/popper.min.js'%}"></script>
         <script src="{% static 'blog/js/bootstrap.min.js'%}"></script>
