--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -12,57 +12,137 @@
     
     <body>
       <header>
-          <!-- start navar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <section class="p-2 text-light text-center" style="background-color: #1EAAF1 ;">
+              <div class="container-fluid">
+                  <div class="row">
+                      <div class="col-md"><small><i class="fas fa-map-marker-alt fa-2x" style="color: tomato;"></i></small> العنوان الرسمي و المضبوط للمؤسسة </div>
+                      <div class="col-md"><small><i class="fas fa-phone-square fa-2x " style="color:white; "></i></small> هاتف المؤسسة</div>
+                       <div class="col-md"><small><i class="fas fa-paper-plane fa-2x " style="color:orange; "></i></small> ly.zoneouest07@gmail.com</div>
+                  </div>
+              </div>
+          </section>
+            <!-- start navar -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-            <a class="navbar-brand" href="#">
-                <img src="{% static 'blog/images/logo3.png'%}"  alt="شعار المؤسسة"  width="35px">
+                <a class="navbar-brand" href="#">
+                    <img src="{% static 'blog/images/logo3.png'%}"  alt="شعار المؤسسة"  width="35px">
+                    
+                    ثانوية ضو مسعود</a>
                 
-                ثانوية ضو مسعود</a>
-             
-            <button class=" navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                قائمة <span class="navbar-toggler-icon"></span> 
-            </button>
-         
-            <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-              <ul class="navbar-nav " >
-                    <li class="nav-item active">
-                             <a class="nav-link" href="#">الرئيسية <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                            <a class="nav-link" href="#">المدونة</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        محتوىات</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">المحتوى الأول </a>
-                            <a class="dropdown-item" href="#">المحتوى الثاني</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">المحتوى الثالث</a>
-                    </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">من أنا</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">إتصل بنا </a>
-                    </li>
-                     
-              </ul>
-              <ul  class="navbar-nav mr-auto">
-                  <li class="nav-item"> <a class="nav-link" href="#"> تسجيل الدخول </a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">   تسجيل  </a></li>
-              </ul>
-              
-            </div>
-          </nav>
-          <!-- End Navbar -->
+                <button class=" navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    قائمة <span class="navbar-toggler-icon"></span> 
+                </button>
+            
+                <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+                <ul class="navbar-nav " >
+                        <li class="nav-item active">
+                                <a class="nav-link" href="#">الرئيسية <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                                <a class="nav-link" href="#">المدونة</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            محتوىات</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">المحتوى الأول </a>
+                                <a class="dropdown-item" href="#">المحتوى الثاني</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">المحتوى الثالث</a>
+                        </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">من أنا</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">إتصل بنا </a>
+                        </li>
+                        
+                </ul>
+                <ul  class="navbar-nav mr-auto">
+                    <li class="nav-item"> <a class="nav-link" href="#"> تسجيل الدخول </a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">   تسجيل  </a></li>
+                </ul>
+                
+                </div>
+            </nav>
+            <!-- End Navbar -->
       </header>
+      <section>
+        <h1>
+            السلام عليكم ورحمة الله و بركاته
+            </h1>
+      </section>
+      <footer class="bg-dark">
+          <div class="container-fluid">
+            <div class="row">
+               <div class="col-md">
+                   <div class="card-group pt-3">
+                       <div class="card m-3">
+                           <h3 class="card-title text-center border-bottom  p-2 m-3">
+                               من أنا 
+                           </h3>
+                            <div class="card-body">
+                                <div class="text-center">
+                                    <img src="{% static 'blog/images/logo3.png'%}" width="120" alt="أنا">
+                                </div>
+                                ثانوية ضو مسعود مديرية التربية لولاية بسكرة
+                                ثانوية ضو مسعود مديرية التربية لولاية بسكرة
+                                ثانوية ضو مسعود مديرية التربية لولاية بسكرة
+                                ثانوية ضو مسعود مديرية التربية لولاية بسكرة
+                                ثانوية ضو مسعود مديرية التربية لولاية بسكرة
+                                ثانوية ضو مسعود مديرية التربية لولاية بسكرة
+                                ثانوية ضو مسعود مديرية التربية لولاية بسكرة
 
-<h1>
-    السلام عليكم ورحمة الله و بركاته
-    </h1>
+                                ثانوية ضو مسعود مديرية التربية لولاية بسكرة
+
+                            </div>
+                       </div>
+                       <div class="card m-3">
+                            <h3 class="card-title text-center border-bottom  p-2 m-3">
+                               مواقع هامة
+                            </h3>
+                            <div class="card-body">
+                               <ul>
+                                   <li><a href="#"> الموقع الأول</a></li>
+                                   <li><a href="#"> الموقع الثاني</a></li>
+                                   <li><a href="#"> الموقع الثالث</a></li>
+                                   <li><a href="#"> الموقع الرابع</a></li>
+                               </ul>
+
+                            </div>
+                        </div>
+                        <div class="card m-3">
+                            <h3 class="card-title text-center border-bottom  p-2 m-3">
+                               مواقع التواصل الإجتماعي 
+                            </h3>
+                            <h3 class="card-body text-center">
+                                <a href="https://www.facebook.com/LyceeDawMassoud"> <i class="fab fa-facebook" style="color:rgb(29, 74, 196)"></i></a>
+                                <a href="#"> <i class="fab fa-twitter" style="color:rgba(118, 217, 235, 0.849)"></i></a>
+                                <a href="#">  <i class="fab fa-instagram"  style="color:rgba(172, 99, 240, 0.897)"></i></a>
+                                <a href="#">  <i class="fab fa-telegram" style="color:rgba(45, 153, 241, 0.897)"></i></a>
+                                <a href="#"> <i class="fab fa-youtube " style="color:red" ></i></a>
+                                <a href="#">  <i class="fab fa-linkedin" style="color:rgba(50, 87, 211, 0.897)"></i></a>
+                               
+                            </h3>
+                        </div>
+                   </div>
+               </div>
+            </div>
+            <div class="row p-2">
+                <div class="col-md text-center">
+                    <small class="text-light">&copy; جميع الحقوق محفوظة</small>
+                </div>
+                
+            </div>
+              
+          </div>
+        
+
+
+      </footer>
+
+
        
         <script src="{% static 'blog/js/jquery-3.3.1.slim.min.js'%}"></script>
         <script src="{% static 'blog/js/popper.min.js'%}"></script>
