update settings.py for hosting . and add sidebar in index.html

--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -45,10 +45,12 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             محتوىات</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">المحتوى الأول </a>
-                                <a class="dropdown-item" href="#">المحتوى الثاني</a>
+                                <a class="dropdown-item" href="#">منشورات </a>
+                                <a class="dropdown-item" href="#">النشاطات</a>
+                                <a class="dropdown-item" href="#">فيديوهات </a>
+                                <a class="dropdown-item" href="#">موارد</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">المحتوى الثالث</a>
+                                <a class="dropdown-item" href="#">الطاقم</a>
                         </div>
                         </li>
                         <li class="nav-item">
@@ -69,10 +71,49 @@
             <!-- End Navbar -->
       </header>
       <section>
-        <h1>
+        <h1 class="text-center">
             السلام عليكم ورحمة الله و بركاته
             </h1>
-      </section>
+            <div class="container">
+                <div class="row mt-4">
+                    <div class="col-md-8">
+                        المحتوى
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-3">
+                            <h3 class="text-center bg-primary text-light p-2"> آخر النشاطات</h3>
+                            <ul>
+                                <li><a href="#""> النشاط الأول </a></li>
+                                <li><a href="#"> النشاط الثاني </a></li>
+                                <li><a href="#"> النشاط الثالث </a></li>
+                                <li><a href="#"> النشاط الرابع </a></li>
+                                <li><a href="#"> النشاط الخامس </a></li>
+                            </ul>
+                        </div>
+                        <div class="card mb-3">
+                            <h3 class="text-center bg-info text-light p-2"> آخر التدوينات</h3>
+                            <ul>
+                                <li><a href="#"> التدوينة الأولى </a></li>
+                                <li><a href="#"> التدوينة  الثانية </a></li>
+                                <li><a href="#"> التدوينة الثالثة </a></li>
+                                <li><a href="#"> التدوينة الرابعة </a></li>
+                                <li><a href="#"> التدوينة الخامسة </a></li>
+                            </ul>
+                        </div>
+                        <div class="card mb-3">
+                            <h3 class="text-center bg-secondary text-light p-2"> آخر التعليقات</h3>
+                            <ul>
+                                <li><a href="#"> التعليق الأول </a></li>
+                                <li><a href="#"> التعليق الثاني </a></li>
+                                <li><a href="#"> التعليق الثالث </a></li>
+                                <li><a href="#"> التعليق الرابع </a></li>
+                                <li><a href="#"> التعليق الخامس </a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d663.9705295392205!2d5.69863297081863!3d34.85560109927865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12f50995ad737d17%3A0x7a4b05d5faa2d6aa!2z2KvYp9mG2YjZitipINi22Ygg2YXYs9i52YjYrw!5e1!3m2!1sar!2sdz!4v1589304767865!5m2!1sar!2sdz" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>      </section> -->
       <footer class="bg-dark">
           <div class="container-fluid">
             <div class="row">
