create base.html create the bloges page and create the contente design of bloges and use the django loop 'for' in html

--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -77,7 +77,9 @@
             <div class="container">
                 <div class="row mt-4">
                     <div class="col-md-8">
-                        المحتوى
+                        {% block content%}
+
+                        {% endblock content%}
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-3">
@@ -113,8 +115,8 @@
                     </div>
                 </div>
             </div>
-            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d663.9705295392205!2d5.69863297081863!3d34.85560109927865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12f50995ad737d17%3A0x7a4b05d5faa2d6aa!2z2KvYp9mG2YjZitipINi22Ygg2YXYs9i52YjYrw!5e1!3m2!1sar!2sdz!4v1589304767865!5m2!1sar!2sdz" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>      </section> -->
-      <footer class="bg-dark">
+            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d663.9705295392205!2d5.69863297081863!3d34.85560109927865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12f50995ad737d17%3A0x7a4b05d5faa2d6aa!2z2KvYp9mG2YjZitipINi22Ygg2YXYs9i52YjYrw!5e1!3m2!1sar!2sdz!4v1589304767865!5m2!1sar!2sdz" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>       -->
+      <footer class="bg-dark" >
           <div class="container-fluid">
             <div class="row">
                <div class="col-md">
@@ -167,6 +169,7 @@
                                
                             </h3>
                         </div>
+                      
                    </div>
                </div>
             </div>
