--- a/src/blog/templates/blog/blogs_page.html
+++ b/src/blog/templates/blog/blogs_page.html
@@ -3,10 +3,10 @@
 {% block content%}
 
 {% for post in posts %}
- <div class="border secondary p-3 mb-1">
-     <img class="img-fluid" width="70px" src="{% static 'blog/images/logo3.png'%}" alt="صورة الناشر">
+ <div class="border  border-secondary rounded p-3 mb-3 dashed"    >
+     <img class="img-fluid rounded-circle border  m-2 p-1 " width="70px" src="{% static 'blog/images/logo3.png'%}" alt="صورة الناشر">
      <span>نشر في {{post.post_date}} من طرف  {{post.author}}</span>
-     <h3><a href="#"> {{post.title}}</a></h3>
+     <h3><a class="text-dark" href="#"> {{post.title}}</a></h3>
      <p>{{post.content}}</p>
  </div>
 {% endfor %}                    
