install and use  crispy_forms add comments form use it in views.py changing  name of fields of comments form in arabic add latest comment and latest posts in base.html with include <django tag> make bootstrab desing in pages html

--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -102,13 +102,7 @@
                         </div>
                         <div class="card mb-3">
                             <h3 class="text-center bg-secondary text-light p-2"> آخر التعليقات</h3>
-                            <ul>
-                                <li><a class="text-secondary" href="#"> التعليق الأول </a></li>
-                                <li><a class="text-secondary"href="#"> التعليق الثاني </a></li>
-                                <li><a class="text-secondary"href="#"> التعليق الثالث </a></li>
-                                <li><a class="text-secondary" href="#"> التعليق الرابع </a></li>
-                                <li><a class="text-secondary"href="#"> التعليق الخامس </a></li>
-                            </ul>
+                                {% include 'blog/latest_comments.html' %}
                         </div>
                     </div>
                 </div>
