--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load post_tag %}
 <!DOCTYPE html>
 <html leng="en">
     <head>
@@ -98,11 +99,11 @@
                         </div>
                         <div class="card mb-3">
                             <h3 class="text-center bg-info text-light p-2 "> آخر التدوينات</h3>
-                           {% include 'blog/latest_posts.html' %}
+                           {% latest_posts %}
                         </div>
                         <div class="card mb-3">
                             <h3 class="text-center bg-secondary text-light p-2"> آخر التعليقات</h3>
-                                {% include 'blog/latest_comments.html' %}
+                            {% latest_comments %}
                         </div>
                     </div>
                 </div>
