--- a/src/blog/templates/blog/latest_comments.html
+++ b/src/blog/templates/blog/latest_comments.html
@@ -1,6 +1,13 @@
 <ul class=" list-group list-group-flush pl-3 pr-2 pt-0">
-    {% for comment in comments %}
-        <li class="list-group-item p-2 pb-2"><a class="text-dark" href="{% url 'detail' comment.post.id %}"> {{comment.body}}</a></li>
+    {% for comment in l_comments %}
+        <li class="list-group-item p-2 pb-2"><a class="text-dark" href="{% url 'detail' comment.post.id %}">
+            {% if comment.body|length > 40 %}
+                    {{comment.body|slice:'44'}}..
+                                {% else %}
+                    {{comment.body}}
+            {%endif%}
+
+            </a></li>
     {%empty%}
     <li class="list-group-item p-2 pb-2"> لاتوجد تعليقات </li>
     {% endfor %}
