--- a/src/blog/templates/blog/latest_posts.html
+++ b/src/blog/templates/blog/latest_posts.html
@@ -1,5 +1,6 @@
 <ul class=" list-group list-group-flush pl-3 pr-2 pt-0">
-{% for post in posts %}
+    <!-- تم استخدام خاصية custom_tags من أجل تمرير آخر خمسة تدوينات -->
+{% for post in l_posts %}
     <li class="list-group-item p-2 pb-2"><a class="text-dark" href="{% url 'detail' post.id %}"> {{post.title}}</a></li>
 {% endfor %}
 </ul>
