Add User (registration ) use if user/forms.py  the cleaned_date and raise option use  message.success when signup  (option django) Sign_in and Sign_out change the Login_redirect_URL when login use loginView and LougoutView and use the template_name for LougoutView

--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -68,7 +68,7 @@
                 </ul>
                 <ul  class="navbar-nav mr-auto">
                     <li class="nav-item"> <a class="nav-link" href="#"> تسجيل الدخول </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">   تسجيل  </a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'signup'%}">   تسجيل  </a></li>
                 </ul>
                 
                 </div>
