--- a/src/blog/templates/blog/latest_comments.html
+++ b/src/blog/templates/blog/latest_comments.html
@@ -1,11 +1,15 @@
 <ul class=" list-group list-group-flush pl-3 pr-2 pt-0">
     {% for comment in l_comments %}
         <li class="list-group-item p-2 pb-2"><a class="text-dark" href="{% url 'detail' comment.post.id %}">
+           
             {% if comment.body|length > 40 %}
-                    {{comment.body|slice:'44'}}..
-                                {% else %}
-                    {{comment.body}}
+            <!-- من أجل عرض 44 حرف من التعليق إذا كان التعليق طويل و أكثر من 40 حرف  -->
+                {{comment.body|slice:'43'}}...
+
+            {% else %}          
+                    {{comment.body}}        
             {%endif%}
+            
 
             </a></li>
     {%empty%}
