add login user and logout

--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -67,10 +67,10 @@
                         
                 </ul>
                 <ul  class="navbar-nav mr-auto">
-                    <li class="nav-item"> <a class="nav-link" href="#"> تسجيل الدخول </a></li>
+                    <li class="nav-item"> <a class="nav-link" href="{% url 'login'%}"> تسجيل الدخول </a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'signup'%}">   تسجيل  </a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}"> تسجيل الخروج </a></li>
                 </ul>
-                
                 </div>
             </nav>
             <!-- End Navbar -->
