--- a/src/user/templates/user/login.html
+++ b/src/user/templates/user/login.html
@@ -6,6 +6,16 @@
 
         <div class="border p-4 mb-5 ">
             <legend class="border-bottom pb-1 mb-4 ">تسجيل الدخول </legend>
+            {% if messages %}
+{% for message in messages %}
+
+    <div class="alert alert-{{message.tags}}">
+        {{message}}
+        </div>
+   
+
+    {% endfor %}
+{% endif %}
             <form method="POST">
                 {% csrf_token %}
                 {{form|crispy }}
