replace the sigin form by html form (other method to sigin ) for that we use the class django(login , logout , authenticate)

--- a/src/user/templates/user/sign_up.html
+++ b/src/user/templates/user/sign_up.html
@@ -9,7 +9,7 @@
             <form method="POST">
                 {% csrf_token %}
                 {{form|crispy }}
-                <input class="btn btn-primary btn-lg mt-4 " type="submit" value="تسجيل" >
+                <input class="btn btn-dark btn-lg mt-4 " type="submit" value="تسجيل" >
             </form>
             <div class="border-top mt-4 pt-2">
                 <small> إذا كان لديك حساب من قبل فيمكنك 
