--- a/src/user/templates/user/login.html
+++ b/src/user/templates/user/login.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html'%}
 {% load static %}
-{% load crispy_forms_tags %}
+ 
 {% block content%}
 
 
@@ -9,7 +9,7 @@
             {% if messages %}
 {% for message in messages %}
 
-    <div class="alert alert-{{message.tags}}">
+    <div class="alert alert-danger">
         {{message}}
         </div>
    
@@ -18,7 +18,14 @@
 {% endif %}
             <form method="POST">
                 {% csrf_token %}
-                {{form|crispy }}
+                <div class="form-group">
+                    <label for="username">اسم المستخدم</label>
+                    <input type="text" name="username" id="username" class="form-control" placeholder="قم بكتابة اسم المستخدم">
+                </div>
+                <div class="form-group">
+                    <label for="password">كلمة المرور</label>
+                    <input type="password" name="password" id="password" class="form-control" placeholder="كلمة المرور">
+                </div>
                 <input class="btn btn-primary btn-lg mt-4 " type="submit" value="تسجيل الدخول" >
             </form>
             <div class="border-top mt-4 pt-2">
