--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -66,11 +66,17 @@
                         </li>
                         
                 </ul>
+                {% if user.is_authenticated %}
                 <ul  class="navbar-nav mr-auto">
-                    <li class="nav-item"> <a class="nav-link" href="{% url 'login'%}"> تسجيل الدخول </a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'signup'%}">   تسجيل  </a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}"> تسجيل الخروج </a></li>
+                    <li class="nav-item"> <a class="nav-link" href="{% url 'profile' %}"> الملف الشخصي <i class="fas fa-address-card"></i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}"> تسجيل الخروج <i class="fas fa-sign-out-alt"></i></a></li>
                 </ul>
+                {% else %}
+                <ul  class="navbar-nav mr-auto">
+                    <li class="nav-item"> <a class="nav-link" href="{% url 'login'%}"> تسجيل الدخول <i class="fas fa-sign-in-alt"></i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'signup'%}">   تسجيل <i class="fas fa-user-plus"></i> </a></li>
+                </ul>
+                {% endif %}
                 </div>
             </nav>
             <!-- End Navbar -->
