--- a/src/blog/templates/blog/blogs_page.html
+++ b/src/blog/templates/blog/blogs_page.html
@@ -18,5 +18,6 @@
      <h3><a class="text-dark" href="{% url 'detail' post.id %}"> {{post.title}}</a></h3>
      <p>{{post.content}}</p>
  </div>
-{% endfor %}                    
+{% endfor %}
+{% include  'blog/pagination.html' with page=posts%}                    
 {% endblock content%}
