--- a/src/user/templates/user/profile.html
+++ b/src/user/templates/user/profile.html
@@ -1,16 +1,19 @@
 {% extends 'blog/base.html'%}
 {% load static %}
- 
 {% block content%}
-
-
+        {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{message.tags}}">
+                {{message}}
+                </div>
+            {% endfor %}
+            {% endif %}
         <div class="border p-4 mb-5 ">
         <div class="row">
             <div class="col-md-3 text-center">
-                <img class="img-fluid rounded-circle border  m-2 p-1 " width="120px" height="120px"  src="{{ user.profile.image.url}}" alt="صورة الناشر">
+                <img class="img-fluid rounded-circle border  m-2 p-1 " width="120px" height="120px"  src="{{ user.profile.image.url}}" alt="{{user.username}}">
                 <div class="mt-3">
-                    <a class="btn btn-secondary bg-secondary" href="#"><i class="fas fa-pen fa-xs"></i> تعديل</a>
-                   
+                    <a class="btn btn-secondary bg-secondary" href="{% url 'profile_update' %}"><i class="fas fa-pen fa-xs"></i> تعديل</a>
                 </div>
             </div>
             <div class="col-md-9">
@@ -35,10 +38,7 @@
             {%empty%}
             <h5 class="text-dark text-center">لا يوجد تدوينات </h5>
             {%endfor%}
-            {% include  'blog/pagination.html' with page=posts%} 
+            {% include  'blog/pagination.html' with page=posts%}
             </div>
         </div>
-           
-        
-                
 {% endblock content%}
