--- a/src/user/templates/user/profile_Update.html
+++ b/src/user/templates/user/profile_Update.html
@@ -15,7 +15,7 @@
                     <br>
                     الصورة الحالية : <a href="{{user.profile.image.url}}">{{user.profile.image.path}}</a>
                     <br>
-                    <label for="image" class="btn btn-outline-dark mt-2">اختيار الصورة</label>
+                    <label for="image" class="btn btn-outline-dark mt-2">اختيار الصورة <i class="fas fa-image fa-lg"></i></label>
                     <input type="file" name="image" id="image" accept="image/*" style="display: none;">
                 </div>
                 <button class="btn btn-success btn-lg mt-4 " type="submit">حفظ <i class="fas fa-save text-dark"></i></button>
