--- a/src/blog/templates/blog/update_post.html
+++ b/src/blog/templates/blog/update_post.html
@@ -5,12 +5,12 @@
 
 
         <div class="border p-4 mb-5 ">
-            <legend class="border-bottom pb-1 mb-4 "> نشر تدوينة جديدة <i class="fas fa-blog"></i></legend>
+            <legend class="border-bottom pb-1 mb-4 "> تعديل تدوينة   <i class="fas fa-cogs"></i></legend>
             <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{form|crispy }}
                
-                <button class="btn btn-info btn-lg mt-4 " type="submit">نشر <i class="fas fa-share-square"></i></button>
+                <button class="btn btn-info btn-lg mt-4 " type="submit">تعديل <i class="fas fa-cog"></i></button>
             </form>
         </div>
         
