--- a/src/user/templates/user/profile.html
+++ b/src/user/templates/user/profile.html
@@ -13,7 +13,7 @@
             <div class="col-md-3 text-center">
                 <img class="img-fluid rounded-circle border  m-2 p-1 " width="120px" height="120px"  src="{{ user.profile.image.url}}" alt="{{user.username}}">
                 <div class="mt-3">
-                    <a class="btn btn-secondary bg-secondary" href="{% url 'profile_update' %}"><i class="fas fa-pen fa-xs"></i> تعديل</a>
+                    <a class="btn btn-dark " href="{% url 'profile_update' %}"><i class="fas fa-cogs "></i> تعديل</a>
                 </div>
             </div>
             <div class="col-md-9">
