--- a/src/blog/templates/blog/post_detail.html
+++ b/src/blog/templates/blog/post_detail.html
@@ -1,21 +1,30 @@
 {% extends 'blog/base.html'%}
-{% load static %}
+
 {% load crispy_forms_tags %}
 {% block content%}
 
  <div class="border  p-3 mb-3 " >
-     <img class="img-fluid rounded-circle border  m-2 p-1 " width="70px" src="{{post.author.profile.image.url}}" alt="صورة الناشر">
-     <span>نشر في {{post.post_date|date:'d-m-Y'}}</span>
-     <!-- ازرار التعديل  -->
-     {% if post.author == user %}
-     <div class="form-group  pt-3" style="float: left;">
-         <a class="btn btn-secondary" href="{% url 'post-update' post.pk %}"> تحرير</a>
-         <a class="btn btn-danger" href="{% url 'post-delete' post.pk %}"> حذف</a>
+     <div class="container-fluid">
+         <div class=" row">
+             <div cla>
+                <img class="img-fluid rounded-circle border  m-2 p-1 " width="70px" src="{{post.author.profile.image.url}}" alt="صورة الناشر">
+                <span>نشر في {{post.post_date|date:'d-m-Y'}}</span>
+                <!-- ازرار التعديل  -->
+                {% if post.author == user %}
+                <div class="form-group  pt-3" style="float: left;">
+                    <a class="btn btn-secondary" href="{% url 'post-update' post.pk %}"> تعديل</a>
+                    <a class="btn btn-danger" href="{% url 'post-delete' post.pk %}"> حذف</a>
+                </div>
+                {% endif %}
+           
+                <h3><a class="text-dark" href="#"> {{post.title}}</a></h3>
+                
+               <pre class="text-justify">{{post.content}}</pre>
+               
+             </div>
+         </div>
      </div>
-     {% endif %}
-
-     <h3><a class="text-dark" href="#"> {{post.title}}</a></h3>
-     <p>{{post.content}}</p>
+ 
  </div>
 
     <h2 class="border-bottom mt-5 mb-3"> التعليقات      ({{comments.count}})</h2>
