--- a/src/blog/templates/blog/post_detail.html
+++ b/src/blog/templates/blog/post_detail.html
@@ -19,7 +19,7 @@
            
                 <h3><a class="text-dark" href="#"> {{post.title}}</a></h3>
                 
-               <pre class="text-justify">{{post.content}}</pre>
+               <pre>{{post.content}}</pre>
                
              </div>
          </div>
