--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -50,8 +50,8 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             محتوىات</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{% url 'typesactivities'%}">منشورات </a>
-                                <a class="dropdown-item" href="#">النشاطات</a>
+                                <a class="dropdown-item" href="#">منشورات </a>
+                                <a class="dropdown-item" href="{% url 'typesactivities'%}">النشاطات</a>
                                 <a class="dropdown-item" href="#">فيديوهات </a>
                                 <a class="dropdown-item" href="#">موارد</a>
                                 <div class="dropdown-divider"></div>
