--- a/src/ECAs/templates/ECAs/latest_activities.html
+++ b/src/ECAs/templates/ECAs/latest_activities.html
@@ -1,6 +1,6 @@
-{% load static %}
-<div class="border p-3 mb-3 " > 
-    <div class="bg-secondary text-center ">
+
+<div class="border  p-2 mb-3" > 
+    <div class="bg-secondary">
      
     <div id="carouselExampleControls{{act.pk}}" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -22,11 +22,11 @@
           {% endfor %}
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls{{act.pk}}" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleControls{{act.pk}}" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
