add activities form and multi files upload

--- a/src/blog/templates/blog/post_detail.html
+++ b/src/blog/templates/blog/post_detail.html
@@ -6,7 +6,7 @@
  <div class="border  p-3 mb-3 " >
      <div class="container-fluid">
          <div class=" row">
-             <div cla>
+             <div class=" col">
                 <img class="img-fluid rounded-circle border  m-2 p-1 " width="70px" src="{{post.author.profile.image.url}}" alt="صورة الناشر">
                 <span>نشر في {{post.post_date|date:'d-m-Y'}}</span>
                 <!-- ازرار التعديل  -->
