--- a/src/ECAs/templates/ECAs/activities.html
+++ b/src/ECAs/templates/ECAs/activities.html
@@ -5,36 +5,8 @@
 
 <h1>النشاطات</h1>
 {% for act in acts %}
-{% latest_activities act.id %}
-<!-- <div class="border p-3 mb-3 " > 
-<div class="bg-secondary text-center ">
- 
-<div id="carouselExampleControls{{act.pk}}" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'blog\images\4.jpg'%}"class="d-block w-100" style=" height: 300px;"alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'blog\images\5.jpg'%}" class="d-block w-100" style=" height: 300px;"alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'blog\images\6.jpg'%}" class="d-block w-100"style=" height: 300px;"alt="...">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls{{act.pk}}" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls{{act.pk}}" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
-
-    
-<p>{{act.title}} : {{act.content}}</p>
-</div> -->
+<!-- tag to load page regroup_activities.html -->
+{% regroup_activities  act.id %}
 {%empty%}
 <div class="border p-3 mb-3">
     <h3>لا يوجد نشاط  إذا كان لديك حساب مسجل من قبل يمكنك <a href="{% url 'login' %}">تسجيل الدخول</a> والقيام بنشر
