--- a/src/ECAs/templates/ECAs/latest_activities.html
+++ b/src/ECAs/templates/ECAs/latest_activities.html
@@ -1,35 +1,18 @@
+<ul class=" list-group list-group-flush pl-3 pr-2 pt-0">
+  {% for act in l_acts %}
+      <li class="list-group-item p-2 pb-2"><a class="text-dark" href="{% url 'act_detail' act.pk %}">
+         
+          {% if act.title|length > 40 %}
+          <!-- من أجل عرض 44 حرف من التعليق إذا كان التعليق طويل و أكثر من 40 حرف  -->
+              {{act.title|slice:'39'}}...
 
-<div class="border  p-2 mb-3" > 
-    <div class="bg-secondary">
-     
-    <div id="carouselExampleControls{{act.pk}}" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
+          {% else %}          
+                  {{act.title}}        
+          {%endif%}
+          
 
-          {% for img in imgs_activiti%}
-          {% if forloop.counter0 == 0%}
-          <div class="carousel-item active">
-            <img src="{{img.image.url}}"class="d-block w-100" style=" height: 300px;"alt="....">
-          </div>
-          {% else %}
-          <div class="carousel-item ">
-            <img src="{{img.image.url}}"class="d-block w-100" style=" height: 300px;"alt="....">
-          </div>
-          {% endif %}
-          {%empty%}
-          <div class="carousel-item active">
-            <img src="{{act.type.image.url}}"class="d-block w-100" style=" height: 300px;"alt="لا يوجد صور ">
-          </div>
-          {% endfor %}
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls{{act.pk}}" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls{{act.pk}}" role="button" data-slide="next">
-          <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div> 
-    <p>{{act.title}} : {{act.content}} {{imgs_activiti.count}}</p>
-    </div>
+          </a></li>
+  {%empty%}
+  <li class="list-group-item p-2 pb-2"> لاتوجد تعليقات </li>
+  {% endfor %}
+</ul>
