--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -96,13 +96,7 @@
                     <div class="col-md-4">
                         <div class="card mb-3">
                             <h3 class="text-center bg-primary text-light p-2"> آخر النشاطات</h3>
-                            <ul>
-                                <li><a class="text-secondary" href="#""> النشاط الأول </a></li>
-                                <li><a class="text-secondary"href="#"> النشاط الثاني </a></li>
-                                <li><a class="text-secondary"href="#"> النشاط الثالث </a></li>
-                                <li><a class="text-secondary"href="#"> النشاط الرابع </a></li>
-                                <li><a class="text-secondary"href="#"> النشاط الخامس </a></li>
-                            </ul>
+                            {% latest_activities %}
                         </div>
                         <div class="card mb-3">
                             <h3 class="text-center bg-info text-light p-2 "> آخر التدوينات <i class="fas fa-blog "></i></h3>
@@ -125,7 +119,7 @@
                            <h3 class="card-title text-center border-bottom  p-2 m-3">
                                من أنا 
                            </h3>
-                            <div class="card-body text-secondary text-justify">
+                            <div class="card-body text-secondary text-justify" >
                                 <div class="text-center">
                                     <img src="{% static 'blog/images/logo3.png'%}" width="120" alt="أنا">
                                 </div>
@@ -185,9 +179,6 @@
 
 
       </footer>
-
-
-     
         <script src="{% static 'blog/js/jquery-3.3.1.slim.min.js'%}"></script>
         <script src="{% static 'blog/js/popper.min.js'%}"></script>
         <script src="{% static 'blog/js/bootstrap.min.js'%}"></script>
