--- a/src/ECAs/templates/ECAs/latest_activities.html
+++ b/src/ECAs/templates/ECAs/latest_activities.html
@@ -13,6 +13,6 @@
 
           </a></li>
   {%empty%}
-  <li class="list-group-item p-2 pb-2"> لاتوجد تعليقات </li>
+  <li class="list-group-item p-2 pb-2"> لاتوجد نشاطات </li>
   {% endfor %}
 </ul>
